1. Add python script.
2. Create python env and activate it

Get data from the server for a particular day, show only names and id number side by side w
with data from our database with only name for a particular day, use these names to assign the data in database
then update the data in the database


Add options in advance to read and update python script
Add options to read and update config.js, if error is in the config file don't overwrite


Highlighting the Selected Row: When you click a row in either table, it gets highlighted to show it's active.
Clicking to Reconcile: After selecting a row in each table, clicking a "Reconcile" button will:
Move the id and name data from the scraped data table to the database table.
Remove the selected row from the scraped data table.
Updating the Database Table: Add the reconciled data (ID and name) to the last column in the database table.
Let’s break down the implementation.

Selecting Rows: When a row is clicked, it highlights, and we store the selected row.
Reconciliation Logic: When you click the "Reconcile" button, it:
Copies the ID and name from the scraped data to the selected row in the database table.
Deletes the selected row from the scraped data table.