@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Advance</title>
+    <link rel="stylesheet" href="../css/index.css" />
+    <link id="themeStyleSheet" rel="stylesheet" href="../css/light.css" />
+    <link rel="stylesheet" href="../css/advance.css" />
 
     <!-- Fontawesome files -->
     <link href="../assets/fontawesome/css/fontawesome.css" rel="stylesheet" />
     <link href="../assets/fontawesome/css/brands.css" rel="stylesheet" />
     <link href="../assets/fontawesome/css/solid.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/light.css" />
-    <!-- <link rel="stylesheet" href="../css/dark.css" /> -->
-    <link rel="stylesheet" href="../css/advance.css" />
-
-
+    <script src="../js/renderer.js"></script>
     <script src="../js/advance.js" defer></script>
     <script src="../js/toast.js" defer></script>
   </head>
